--- a/index.html
+++ b/index.html
@@ -9,50 +9,47 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f8f1f1; /* 淡粉色背景 */
             font-family: 'Arial', sans-serif;
             margin: 0;
+            padding: 20px;
         }
         .container {
             background: white;
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            max-width: 700px;
             text-align: center;
-            transition: 0.3s;
-            overflow: hidden;
-        }
-        .container:hover {
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
         h1 {
-            color: #F8A9C4; /* 樱花粉色 */
-            font-size: 28px;
+            color: #F8A9C4;
+            font-size: 24px;
             margin-bottom: 20px;
         }
         .image {
             width: 100%;
-            max-width: 100%;
-            height: auto;
             border-radius: 15px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: none;
+        }
+        /* 默认显示第一张图片 */
+        #image1 {
+            display: block;
         }
         .btn {
-            display: inline-block;
             padding: 12px 25px;
             font-size: 18px;
             color: white;
-            background-color: #F8A9C4; /* 樱花粉色 */
-            text-decoration: none;
+            background-color: #F8A9C4;
+            border: none;
             border-radius: 5px;
-            transition: 0.3s;
             margin-top: 20px;
+            cursor: pointer;
+            transition: 0.3s;
         }
         .btn:hover {
-            background-color: #F07899; /* 深一些的粉色 */
+            background-color: #F07899;
         }
         .pagination {
             display: flex;
@@ -61,30 +58,38 @@
         }
         .pagination button {
             padding: 10px 20px;
-            background-color: #F8A9C4; /* 樱花粉色 */
+            background-color: #F8A9C4;
             color: white;
             border: none;
             border-radius: 5px;
             margin: 0 5px;
             cursor: pointer;
-            transition: 0.3s;
         }
         .pagination button:hover {
-            background-color: #F07899; /* 深一些的粉色 */
+            background-color: #F07899;
         }
         .explanation {
             display: none;
             margin-top: 20px;
             text-align: left;
-            background-color: #fff7f7; /* 淡粉色背景 */
+            background-color: #fff7f7;
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            font-size: 14px;
+            max-height: 500px;
+            overflow-y: auto;
+        }
+        .explanation h2 {
+            color: #F8A9C4;
+            font-size: 20px;
+            border-bottom: 2px solid #F8A9C4;
+            padding-bottom: 5px;
         }
     </style>
 </head>
 <body>
-     <div class="container">
+    <div class="container">
         <h1>呑海楼へ、ようこそ！桜会席料理のご紹介です。</h1>
 
         <!-- 图片展示区域 -->
@@ -139,7 +144,9 @@
 
     <script>
         function showImage(index) {
+            // 先隐藏所有图片
             document.querySelectorAll('.image').forEach(img => img.style.display = 'none');
+            // 仅显示被选中的图片
             document.getElementById("image" + index).style.display = "block";
         }
 
